// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Comparator Snapshots correspond au snapshot avec des services 1`] = `
<div>
  <div
    class="min-h-screen overflow-visible mt-[5%]"
  >
    <div
      class="min-h-screen bg-white py-10"
    >
      <main
        class="mx-auto flex max-w-6xl flex-col gap-6 px-4"
      >
        <section
          class="rounded-3xl py-4"
        >
          <div
            class="mb-4 inline-flex items-center gap-2 rounded-full bg-sky-50 px-3 py-1 text-xs text-primary-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-funnel h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
              />
            </svg>
            Outil d'aide à la décision
          </div>
          <div>
            <h1
              class="text-3xl text-slate-900"
            >
              Comparateur Intelligent
            </h1>
            <p
              class="mt-2 max-w-xl text-sm text-slate-500"
            >
              Comparez les produits financiers par critères clés : coût, rapidité,
              <br />
              couverture.
            </p>
          </div>
        </section>
        <section
          class="rounded-xl bg-white p-6 shadow-sm"
        >
          <h2
            class="mb-4 text-sm text-slate-800"
          >
            Type de produit
          </h2>
          <div
            class="grid grid-cols-1 gap-3 md:grid-cols-3"
          >
            <button
              class="flex items-center justify-between rounded-xl px-3 py-2 text-left text-sm transition border border-sky-300 bg-primary-50 text-slate-800"
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-right h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
                <span>
                  Transferts & Mobile Money
                </span>
              </span>
            </button>
            <button
              class="flex items-center justify-between rounded-xl px-3 py-2 text-left text-sm transition border border-slate-100 bg-white text-slate-700 hover:bg-slate-50"
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-dollar-sign h-3 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="2"
                    y2="22"
                  />
                  <path
                    d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                  />
                </svg>
                <span>
                  Crédit & Prêts
                </span>
              </span>
            </button>
            <button
              class="flex flex-col items-start gap-3 rounded-xl border border-slate-100 bg-white px-3 py-2 text-left text-sm text-slate-400"
              disabled=""
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trending-down h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 17h6v-6"
                  />
                  <path
                    d="m22 17-8.5-8.5-5 5L2 7"
                  />
                </svg>
                <span>
                  Épargne
                </span>
              </span>
              <span
                class="rounded-full border border-slate-200 bg-white px-2 py-0.5 text-[10px]"
              >
                Bientôt disponible
              </span>
            </button>
          </div>
        </section>
        <section
          class="space-y-6 rounded-xl bg-white p-6 shadow-sm"
        >
          <div
            class="grid grid-cols-1 gap-4 md:grid-cols-3"
          >
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="serviceType"
              >
                Type de service
              </label>
              <button
                aria-autocomplete="none"
                aria-controls="radix-«ra3»"
                aria-expanded="false"
                class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 px-3 py-2 whitespace-nowrap transition-[color,box-shadow] disabled:cursor-not-allowed disabled:opacity-50 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-11 w-full rounded-lg border border-slate-200 bg-slate-50 pr-8 text-sm text-slate-700 outline-none focus-visible:border-slate-200 focus-visible:outline-none focus-visible:ring-0 focus-visible:ring-transparent data-[size=default]:h-11"
                data-size="default"
                data-slot="select-trigger"
                data-state="closed"
                dir="ltr"
                id="serviceType"
                role="combobox"
                type="button"
              >
                <span
                  data-slot="select-value"
                  style="pointer-events: none;"
                >
                  Tous les types
                </span>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down size-4 opacity-50"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="country"
              >
                Pays
              </label>
              <button
                aria-autocomplete="none"
                aria-controls="radix-«ra4»"
                aria-expanded="false"
                class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 px-3 py-2 whitespace-nowrap transition-[color,box-shadow] disabled:cursor-not-allowed disabled:opacity-50 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-11 w-full rounded-lg border border-slate-200 bg-slate-50 pr-8 text-sm text-slate-700 outline-none focus-visible:border-slate-200 focus-visible:outline-none focus-visible:ring-0 focus-visible:ring-transparent data-[size=default]:h-11"
                data-size="default"
                data-slot="select-trigger"
                data-state="closed"
                dir="ltr"
                id="country"
                role="combobox"
                type="button"
              >
                <span
                  data-slot="select-value"
                  style="pointer-events: none;"
                >
                  <span
                    class="text-slate-500"
                  >
                    Tous les pays
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down size-4 opacity-50"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="transfer-amount"
              >
                Montant du transfert (F CFA)
              </label>
              <input
                class="h-11 w-full rounded-lg border border-slate-200 bg-white px-3 text-sm text-slate-700 outline-none"
                id="transfer-amount"
                min="0"
                placeholder="50000"
                type="number"
                value="0"
              />
            </div>
          </div>
          <div
            aria-orientation="horizontal"
            class="my-1 h-[0.5px] bg-gray-200"
            role="separator"
          />
          <div
            class="mt-4 flex items-center justify-between"
          >
            <div
              class="flex items-center gap-2 text-xs text-slate-400"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-funnel h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
                />
              </svg>
              <span>
                1
                 services disponibles • 
                0
                 sélectionné(s)
              </span>
            </div>
            <button
              class="inline-flex items-center gap-2 rounded-lg px-5 py-2 text-xs shadow-sm transition bg-primary-200 text-white/70 cursor-not-allowed"
              disabled=""
              type="button"
            >
              <span>
                Comparer
                 
                les services
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </button>
          </div>
        </section>
        <section
          class="space-y-4"
        >
          <h2
            class="text-lg text-slate-900"
          >
            Sélectionnez les services à comparer
          </h2>
          <div
            class="grid gap-4 md:grid-cols-3"
          >
            <article
              class="
          relative flex flex-col gap-3 rounded-xl border p-4 
          cursor-pointer transition-colors
          border-tertiary-200
        "
              tabindex="0"
            >
              <div
                class="flex items-start justify-between gap-3"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <div
                    class="flex h-8 w-8 items-center justify-center overflow-hidden rounded-lg bg-slate-100"
                  >
                    <img
                      alt="Wave"
                      class="h-full w-full object-contain"
                      data-nimg="1"
                      decoding="async"
                      height="32"
                      loading="lazy"
                      src="/_next/image?url=https%3A%2F%2Fexample.com%2Fwave.png&w=64&q=75"
                      srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fwave.png&w=32&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fwave.png&w=64&q=75 2x"
                      style="color: transparent;"
                      width="32"
                    />
                  </div>
                  <div>
                    <p
                      class="text-sm text-slate-900"
                    >
                      Wave Transfer
                    </p>
                    <div
                      class="mt-1 flex items-center gap-1 text-[11px] text-slate-500"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-star h-3 w-3 fill-current text-yellow-400"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
                        />
                      </svg>
                      <span>
                        4.6
                      </span>
                      <span
                        class="inline-flex items-center rounded-full border border-slate-200 px-2 text-[10px]"
                      >
                        transferts d'argent
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="flex items-center gap-1 text-xs text-slate-500"
                >
                  <button
                    aria-checked="false"
                    class="peer bg-input-background dark:bg-input/30 dark:data-[state=checked]:bg-primary focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive shrink-0 rounded-[4px] border shadow-xs transition-shadow outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 size-4 border-slate-200 data-[state=checked]:bg-primary-200 data-[state=checked]:border-primary data-[state=checked]:text-white"
                    data-slot="checkbox"
                    data-state="unchecked"
                    role="checkbox"
                    type="button"
                    value="on"
                  />
                </div>
              </div>
              <div
                class="mt-2 flex items-baseline justify-between"
              >
                <div
                  class="pl-3 text-xs text-slate-500"
                >
                  Frais de service
                  <div
                    class="text-[11px] text-primary-400"
                  >
                    1% du montant (min 50 F CFA · max 5 000 F CFA)
                  </div>
                </div>
                <div
                  class="text-right"
                >
                  <div
                    class="text-right flex items-baseline"
                  >
                    <span
                      class="text-sm text-bold"
                    >
                      0
                    </span>
                    <span
                      class="ml-1 text-[8px] text-slate-500"
                    >
                      F CFA
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="mt-3 flex flex-wrap gap-2 text-[11px] text-slate-500"
              >
                <span
                  class="inline-flex items-center gap-1 rounded-full"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-zap h-3 w-3 text-primary-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
                    />
                  </svg>
                  <span>
                    Instantané
                  </span>
                </span>
              </div>
            </article>
          </div>
        </section>
      </main>
    </div>
  </div>
</div>
`;

exports[`Comparator Snapshots correspond au snapshot en état d'erreur 1`] = `
<div>
  <div
    class="min-h-screen overflow-visible mt-[5%]"
  >
    <div
      class="min-h-screen bg-white py-10"
    >
      <main
        class="mx-auto flex max-w-6xl flex-col gap-6 px-4"
      >
        <section
          class="rounded-3xl py-4"
        >
          <div
            class="mb-4 inline-flex items-center gap-2 rounded-full bg-sky-50 px-3 py-1 text-xs text-primary-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-funnel h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
              />
            </svg>
            Outil d'aide à la décision
          </div>
          <div>
            <h1
              class="text-3xl text-slate-900"
            >
              Comparateur Intelligent
            </h1>
            <p
              class="mt-2 max-w-xl text-sm text-slate-500"
            >
              Comparez les produits financiers par critères clés : coût, rapidité,
              <br />
              couverture.
            </p>
          </div>
        </section>
        <section
          class="rounded-xl bg-white p-6 shadow-sm"
        >
          <h2
            class="mb-4 text-sm text-slate-800"
          >
            Type de produit
          </h2>
          <div
            class="grid grid-cols-1 gap-3 md:grid-cols-3"
          >
            <button
              class="flex items-center justify-between rounded-xl px-3 py-2 text-left text-sm transition border border-sky-300 bg-primary-50 text-slate-800"
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-right h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
                <span>
                  Transferts & Mobile Money
                </span>
              </span>
            </button>
            <button
              class="flex items-center justify-between rounded-xl px-3 py-2 text-left text-sm transition border border-slate-100 bg-white text-slate-700 hover:bg-slate-50"
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-dollar-sign h-3 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="2"
                    y2="22"
                  />
                  <path
                    d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                  />
                </svg>
                <span>
                  Crédit & Prêts
                </span>
              </span>
            </button>
            <button
              class="flex flex-col items-start gap-3 rounded-xl border border-slate-100 bg-white px-3 py-2 text-left text-sm text-slate-400"
              disabled=""
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trending-down h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 17h6v-6"
                  />
                  <path
                    d="m22 17-8.5-8.5-5 5L2 7"
                  />
                </svg>
                <span>
                  Épargne
                </span>
              </span>
              <span
                class="rounded-full border border-slate-200 bg-white px-2 py-0.5 text-[10px]"
              >
                Bientôt disponible
              </span>
            </button>
          </div>
        </section>
        <section
          class="space-y-6 rounded-xl bg-white p-6 shadow-sm"
        >
          <div
            class="grid grid-cols-1 gap-4 md:grid-cols-3"
          >
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="serviceType"
              >
                Type de service
              </label>
              <button
                aria-autocomplete="none"
                aria-controls="radix-«rb9»"
                aria-expanded="false"
                class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 px-3 py-2 whitespace-nowrap transition-[color,box-shadow] disabled:cursor-not-allowed disabled:opacity-50 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-11 w-full rounded-lg border border-slate-200 bg-slate-50 pr-8 text-sm text-slate-700 outline-none focus-visible:border-slate-200 focus-visible:outline-none focus-visible:ring-0 focus-visible:ring-transparent data-[size=default]:h-11"
                data-size="default"
                data-slot="select-trigger"
                data-state="closed"
                dir="ltr"
                id="serviceType"
                role="combobox"
                type="button"
              >
                <span
                  data-slot="select-value"
                  style="pointer-events: none;"
                >
                  Tous les types
                </span>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down size-4 opacity-50"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="country"
              >
                Pays
              </label>
              <button
                aria-autocomplete="none"
                aria-controls="radix-«rba»"
                aria-expanded="false"
                class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 px-3 py-2 whitespace-nowrap transition-[color,box-shadow] disabled:cursor-not-allowed disabled:opacity-50 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-11 w-full rounded-lg border border-slate-200 bg-slate-50 pr-8 text-sm text-slate-700 outline-none focus-visible:border-slate-200 focus-visible:outline-none focus-visible:ring-0 focus-visible:ring-transparent data-[size=default]:h-11"
                data-size="default"
                data-slot="select-trigger"
                data-state="closed"
                dir="ltr"
                id="country"
                role="combobox"
                type="button"
              >
                <span
                  data-slot="select-value"
                  style="pointer-events: none;"
                >
                  <span
                    class="text-slate-500"
                  >
                    Tous les pays
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down size-4 opacity-50"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="transfer-amount"
              >
                Montant du transfert (F CFA)
              </label>
              <input
                class="h-11 w-full rounded-lg border border-slate-200 bg-white px-3 text-sm text-slate-700 outline-none"
                id="transfer-amount"
                min="0"
                placeholder="50000"
                type="number"
                value="0"
              />
            </div>
          </div>
          <div
            aria-orientation="horizontal"
            class="my-1 h-[0.5px] bg-gray-200"
            role="separator"
          />
          <div
            class="mt-4 flex items-center justify-between"
          >
            <div
              class="flex items-center gap-2 text-xs text-slate-400"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-funnel h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
                />
              </svg>
              <span>
                0
                 services disponibles • 
                0
                 sélectionné(s)
              </span>
            </div>
            <button
              class="inline-flex items-center gap-2 rounded-lg px-5 py-2 text-xs shadow-sm transition bg-primary-200 text-white/70 cursor-not-allowed"
              disabled=""
              type="button"
            >
              <span>
                Comparer
                 
                les services
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </button>
          </div>
        </section>
        <section
          class="space-y-4"
        >
          <h2
            class="text-lg text-slate-900"
          >
            Sélectionnez les services à comparer
          </h2>
          <p
            class="text-sm text-red-500"
          >
            Test error
          </p>
        </section>
      </main>
    </div>
  </div>
</div>
`;

exports[`Comparator Snapshots correspond au snapshot en état de chargement 1`] = `
<div>
  <div
    class="min-h-screen overflow-visible mt-[5%]"
  >
    <div
      class="min-h-screen bg-white py-10"
    >
      <main
        class="mx-auto flex max-w-6xl flex-col gap-6 px-4"
      >
        <section
          class="rounded-3xl py-4"
        >
          <div
            class="mb-4 inline-flex items-center gap-2 rounded-full bg-sky-50 px-3 py-1 text-xs text-primary-400"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-funnel h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
              />
            </svg>
            Outil d'aide à la décision
          </div>
          <div>
            <h1
              class="text-3xl text-slate-900"
            >
              Comparateur Intelligent
            </h1>
            <p
              class="mt-2 max-w-xl text-sm text-slate-500"
            >
              Comparez les produits financiers par critères clés : coût, rapidité,
              <br />
              couverture.
            </p>
          </div>
        </section>
        <section
          class="rounded-xl bg-white p-6 shadow-sm"
        >
          <h2
            class="mb-4 text-sm text-slate-800"
          >
            Type de produit
          </h2>
          <div
            class="grid grid-cols-1 gap-3 md:grid-cols-3"
          >
            <button
              class="flex items-center justify-between rounded-xl px-3 py-2 text-left text-sm transition border border-sky-300 bg-primary-50 text-slate-800"
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-arrow-right h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="m12 5 7 7-7 7"
                  />
                </svg>
                <span>
                  Transferts & Mobile Money
                </span>
              </span>
            </button>
            <button
              class="flex items-center justify-between rounded-xl px-3 py-2 text-left text-sm transition border border-slate-100 bg-white text-slate-700 hover:bg-slate-50"
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-dollar-sign h-3 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="2"
                    y2="22"
                  />
                  <path
                    d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                  />
                </svg>
                <span>
                  Crédit & Prêts
                </span>
              </span>
            </button>
            <button
              class="flex flex-col items-start gap-3 rounded-xl border border-slate-100 bg-white px-3 py-2 text-left text-sm text-slate-400"
              disabled=""
              type="button"
            >
              <span
                class="flex items-center gap-3"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-trending-down h-3 w-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 17h6v-6"
                  />
                  <path
                    d="m22 17-8.5-8.5-5 5L2 7"
                  />
                </svg>
                <span>
                  Épargne
                </span>
              </span>
              <span
                class="rounded-full border border-slate-200 bg-white px-2 py-0.5 text-[10px]"
              >
                Bientôt disponible
              </span>
            </button>
          </div>
        </section>
        <section
          class="space-y-6 rounded-xl bg-white p-6 shadow-sm"
        >
          <div
            class="grid grid-cols-1 gap-4 md:grid-cols-3"
          >
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="serviceType"
              >
                Type de service
              </label>
              <button
                aria-autocomplete="none"
                aria-controls="radix-«ram»"
                aria-expanded="false"
                class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 px-3 py-2 whitespace-nowrap transition-[color,box-shadow] disabled:cursor-not-allowed disabled:opacity-50 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-11 w-full rounded-lg border border-slate-200 bg-slate-50 pr-8 text-sm text-slate-700 outline-none focus-visible:border-slate-200 focus-visible:outline-none focus-visible:ring-0 focus-visible:ring-transparent data-[size=default]:h-11"
                data-size="default"
                data-slot="select-trigger"
                data-state="closed"
                dir="ltr"
                id="serviceType"
                role="combobox"
                type="button"
              >
                <span
                  data-slot="select-value"
                  style="pointer-events: none;"
                >
                  Tous les types
                </span>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down size-4 opacity-50"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="country"
              >
                Pays
              </label>
              <button
                aria-autocomplete="none"
                aria-controls="radix-«ran»"
                aria-expanded="false"
                class="data-[placeholder]:text-muted-foreground [&_svg:not([class*='text-'])]:text-muted-foreground aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 dark:hover:bg-input/50 flex items-center justify-between gap-2 px-3 py-2 whitespace-nowrap transition-[color,box-shadow] disabled:cursor-not-allowed disabled:opacity-50 data-[size=sm]:h-8 *:data-[slot=select-value]:line-clamp-1 *:data-[slot=select-value]:flex *:data-[slot=select-value]:items-center *:data-[slot=select-value]:gap-2 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 h-11 w-full rounded-lg border border-slate-200 bg-slate-50 pr-8 text-sm text-slate-700 outline-none focus-visible:border-slate-200 focus-visible:outline-none focus-visible:ring-0 focus-visible:ring-transparent data-[size=default]:h-11"
                data-size="default"
                data-slot="select-trigger"
                data-state="closed"
                dir="ltr"
                id="country"
                role="combobox"
                type="button"
              >
                <span
                  data-slot="select-value"
                  style="pointer-events: none;"
                >
                  <span
                    class="text-slate-500"
                  >
                    Tous les pays
                  </span>
                </span>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down size-4 opacity-50"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-col gap-1"
            >
              <label
                class="text-xs text-slate-500"
                for="transfer-amount"
              >
                Montant du transfert (F CFA)
              </label>
              <input
                class="h-11 w-full rounded-lg border border-slate-200 bg-white px-3 text-sm text-slate-700 outline-none"
                id="transfer-amount"
                min="0"
                placeholder="50000"
                type="number"
                value="0"
              />
            </div>
          </div>
          <div
            aria-orientation="horizontal"
            class="my-1 h-[0.5px] bg-gray-200"
            role="separator"
          />
          <div
            class="mt-4 flex items-center justify-between"
          >
            <div
              class="flex items-center gap-2 text-xs text-slate-400"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-funnel h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 20a1 1 0 0 0 .553.895l2 1A1 1 0 0 0 14 21v-7a2 2 0 0 1 .517-1.341L21.74 4.67A1 1 0 0 0 21 3H3a1 1 0 0 0-.742 1.67l7.225 7.989A2 2 0 0 1 10 14z"
                />
              </svg>
              <span>
                0
                 services disponibles • 
                0
                 sélectionné(s)
              </span>
            </div>
            <button
              class="inline-flex items-center gap-2 rounded-lg px-5 py-2 text-xs shadow-sm transition bg-primary-200 text-white/70 cursor-not-allowed"
              disabled=""
              type="button"
            >
              <span>
                Comparer
                 
                les services
              </span>
              <svg
                aria-hidden="true"
                class="lucide lucide-arrow-right h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="m12 5 7 7-7 7"
                />
              </svg>
            </button>
          </div>
        </section>
        <section
          class="space-y-4"
        >
          <h2
            class="text-lg text-slate-900"
          >
            Sélectionnez les services à comparer
          </h2>
          <p
            class="text-sm text-slate-500"
          >
            Chargement des services...
          </p>
        </section>
      </main>
    </div>
  </div>
</div>
`;
